Many UI additions/fixes Added docker deployment