@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.0.RELEASE</version>
+    <version>2.3.1.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>io.logicaldata</groupId>
@@ -60,9 +60,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
-          <jvmArguments>
-            --enable-preview
-          </jvmArguments>
+<!--          <jvmArguments>-->
+<!--            &#45;&#45;enable-preview-->
+<!--          </jvmArguments>-->
           <layers>
             <enabled>true</enabled>
           </layers>
@@ -72,18 +72,20 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <compilerArgs>
-            --enable-preview
-          </compilerArgs>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+<!--          <compilerArgs>-->
+<!--            &#45;&#45;enable-preview-->
+<!--          </compilerArgs>-->
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>
-            --enable-preview
-          </argLine>
+<!--          <argLine>-->
+<!--            &#45;&#45;enable-preview-->
+<!--          </argLine>-->
         </configuration>
       </plugin>
       <plugin>
@@ -104,7 +106,7 @@
             </configuration>
           </execution>
           <execution>
-            <id>yarn install2</id>
+            <id>yarn install</id>
             <goals>
               <goal>yarn</goal>
             </goals>
@@ -114,7 +116,7 @@
             </configuration>
           </execution>
           <execution>
-            <id>yarn run build2</id>
+            <id>yarn run build</id>
             <goals>
               <goal>yarn</goal>
             </goals>
